src/test/ui/unboxed-closures/unboxed-closures-infer-fnonce-call-twice.stderr
error[E0382]: use of moved value: `tick`
  --> $DIR/unboxed-closures-infer-fnonce-call-twice.rs:10:5
   |
LL |     tick();
   |     ---- value moved here
LL |     tick();
   |     ^^^^ value used here after move
   |
note: closure cannot be invoked more than once because it moves the variable `counter` out of its environment
  --> $DIR/unboxed-closures-infer-fnonce-call-twice.rs:8:29
   |
LL |     let tick = || mem::drop(counter);
   |                             ^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0382`.
